--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,8 @@
 <body>
+    <h1>Quiz Master 2022</h1>
     <button onclick="window.location.reload()">Run Program</button>
     <div id="terminal"></div>
+    <footer>Quiz Master 2022 © David Kelly.<br><a href="https://github.com/davidindub/quiz-master" target="_blank">See this project on GitHub.</a></footer>
 
     <script>
         var term = new Terminal({
