--- a/views/layout.html
+++ b/views/layout.html
@@ -10,8 +10,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
     <title>Quiz Master 2022</title>
     <style>
+        html {
+            background-color: #6494ed;
+        }
+
         body {
-            font-family: Arial;
+            font-family: 'Courier New', Courier, monospace;
+            max-width: 750px;
+            margin: auto;
         }
 
         /**
