Update html styles

--- a/views/layout.html
+++ b/views/layout.html
@@ -11,13 +11,27 @@
     <title>Quiz Master 2022</title>
     <style>
         html {
-            background-color: #6494ed;
+            background-color: #022F40;
         }
 
         body {
             font-family: 'Courier New', Courier, monospace;
             max-width: 750px;
             margin: auto;
+        }
+
+        button {
+            margin: 0 auto;
+        }
+
+        h1, footer {
+            text-align: center;
+            padding-top: 2rem;
+            color: #FBFFF1;
+        }
+
+        #terminal {
+            padding-top: 2rem;
         }
 
         /**
